# obs-properties-dock

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/actions/setup-macos-codesigning/: action.yaml
.github/scripts/: .build.zsh  Package-Windows.ps1
.github/workflows/: build-project.yaml  check-format.yaml  main.yml  push.yaml
build-aux/: .run-format.zsh
cmake/common/: bootstrap.cmake  buildspec_common.cmake
cmake/linux/: helpers.cmake
cmake/macos/: compilerconfig.cmake  defaults.cmake  helpers.cmake
cmake/windows/: helpers.cmake
data/locale/: en-US.ini
shared/properties-view/: CMakeLists.txt
src/: dock-manager.cpp  dock-manager.hpp  obs-classes-helper-functions.hpp  plugin-macros.h.in  plugin-main.cpp  plugin-support.c.in  plugin-support.h  properties-dock.cpp  properties-dock.hpp  transform-dock.cpp  transform-dock.hpp  transform-view.cpp  transform-view.hpp
src/obs-classes/: obs-app.hpp  properties-view.cpp  slider-ignorewheel.cpp
